Criando funcionalidade de cadastro de produtos
falta fazer as verificações da funcionalidade

--- a/Z_tintas_v2/src/main/java/com/mycompany/z_tintas/TELA_LOGIN.form
+++ b/Z_tintas_v2/src/main/java/com/mycompany/z_tintas/TELA_LOGIN.form
@@ -207,10 +207,8 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="ENTRAR"/>
-            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.BevelBorderInfo">
-                <BevelBorder/>
-              </Border>
+            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="javax.swing.BorderFactory.createBevelBorder(0)" type="code"/>
             </Property>
           </Properties>
           <Events>
